[gd_scene load_steps=7 format=3 uid="uid://ctnaln0ywv7d1"]

[ext_resource type="Script" path="res://scenes/home/home.gd" id="1_cvp1o"]
[ext_resource type="Texture2D" uid="uid://cudd841nnjqsc" path="res://scenes/images/wheel_settings_013.svg" id="2_h7ien"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_am4or"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oumyo"]

[sub_resource type="Theme" id="Theme_1qdxu"]
/colors/normal_blue = Color(0.223529, 0.705882, 0.996078, 1)
/colors/pressed_blue = Color(0.00784314, 0.45098, 0.670588, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfdys"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvp1o")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="bg"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavPanelContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="config_button" type="Button" parent="bg/HBoxContainer/NavPanelContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_h7ien")
flat = true
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="bg/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_am4or")

[node name="VBoxContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.15

[node name="title" type="RichTextLabel" parent="bg/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.760784, 0.839216, 0.976471, 0.627451)
theme_override_font_sizes/normal_font_size = 60
text = "MetaCAM"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="line_HSeparator" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="spacer_title_buttons" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_oumyo")

[node name="GridContainer" type="GridContainer" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="launch_detect_button" type="Button" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.86
theme = SubResource("Theme_1qdxu")
text = "Lancer la détection de lunettes"

[node name="add_camera_button" type="Button" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.86
text = "Ajouter une caméra"

[node name="VSeparator2" type="VSeparator" parent="bg/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_nfdys")

[connection signal="pressed" from="bg/HBoxContainer/NavPanelContainer/config_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="bg/HBoxContainer/VBoxContainer/GridContainer/launch_detect_button" to="." method="_on_launch_detect_button_pressed"]
[connection signal="pressed" from="bg/HBoxContainer/VBoxContainer/GridContainer/add_camera_button" to="." method="_on_add_camera_button_pressed"]
